# Godot-CPP-Linux-VSCode-Full-Setup

./: .gitignore  CMakeLists.txt  LICENSE  README.md  quick_setup.sh  source.code-workspace
calculator/: SCsub  calculatorNode.cpp  calculatorNode.h  calculatorRef.cpp  calculatorRef.h  register_types.cpp  register_types.h
example_player/: CMakeLists.txt  Player.cpp  Player.h  SConstruct  build_all.sh
vscode/: c_cpp_properties.json  tasks.json
